# waveshare-fingerprint-reader-adaptor

./: README.md  pyproject.toml
src/waveshare-fingerprint-reader-adaptor/: fingerprint.py
