[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fingerprint-reader"
version = "0.0.1"
authors = [
  { name="SunWoo Kim", email="sanuverse@outlook.com" },
]
description = "This is a library that allows you to use a fingerprint reader made by waveshare using Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sophianetSun/waveshare-fingerprint-reader-adaptor"
"Bug Tracker" = "https://github.com/sophianetSun/waveshare-fingerprint-reader-adaptor/issues"